Build succeeds with the new structure.

--- a/BuildScripts/Projeny.yaml
+++ b/BuildScripts/Projeny.yaml
@@ -1,7 +1,6 @@
-# Default values
-# These can all be overriden by user config files
-
-MaxProjectNameLength: 64 
+# This file is used during the build process to configure the build runner.
+#
+MaxProjectNameLength: 64
 
 # Set to true if you don't want to use the Projeny editor DLL and instead want to link directly
 # to UnityPlugin\Projeny
@@ -11,7 +10,9 @@ ReleaseSources:
     - AssetStoreCache:
 
 PathVars:
-    ProjTemplatesDir: '[ProjenyDir]/../../Content/Shared/Templates'
+    UnityProjectsDir: '[ProjenyDir]/Demo/UnityProjects'
+
+    ProjTemplatesDir: '[ProjenyDir]/Templates'
 
     CsProjectTemplate: '[ProjTemplatesDir]/CsProjectTemplate.csproj'
     CsSolutionTemplate: '[ProjTemplatesDir]/CsSolutionTemplate.sln'
@@ -24,12 +25,13 @@ PathVars:
     ProjectRootGitIgnoreTemplate: '[ProjTemplatesDir]/customProjectRootGitIgnore'
     ProjectRootSvnIgnoreTemplate: '[ProjTemplatesDir]/customProjectRootSvnIgnore'
 
-    YamlDotNetDllPath: '[ProjenyDir]/../../Bin/Build/UnityPlugin/Debug/YamlDotNet.dll'
-    ProjenyUnityEditorDllPath: '[ProjenyDir]/../../Bin/Build/UnityPlugin/Debug/Projeny.dll'
+    YamlDotNetDllPath: '[ProjenyDir]/Bin/UnityPlugin/Release/YamlDotNet.dll'
+    ProjenyUnityEditorDllPath: '[ProjenyDir]/Bin/UnityPlugin/Release/Projeny.dll'
     ProjenyUnityEditorDllMetaFilePath: '[ProjTemplatesDir]/Projeny.dll.meta'
-    ProjenyUnityEditorAssetsDirPath: '[ProjTemplatesDir]/../UnityPlugin/Projeny/Assets'
+    ProjenyUnityEditorAssetsDirPath: '[ProjenyDir]/UnityPlugin/Projeny/Assets'
 
     # Note that these are defaults, and can be overridden in any other Projeny.yaml file
+    # We assume that MSBuild is on the search path ..
     MsBuildExePath: 'msbuild.exe'
     UnityExePath: 'C:/Program Files/Unity/Editor/Unity.exe'
 
