--- a/Content/Release/Projeny.yaml
+++ b/Content/Release/Projeny.yaml
@@ -30,7 +30,7 @@ PathVars:
     ProjenyUnityEditorAssetsDirPath: '[ProjenyDir]/UnityPlugin/Projeny/Assets'
 
     # Note that these are defaults, and can be overridden in any other Projeny.yaml file
-    MsBuildExePath: 'C:/Windows/Microsoft.NET/Framework/v4.0.30319/msbuild.exe'
+    MsBuildExePath: 'msbuild.exe'
     UnityExePath: 'C:/Program Files/Unity/Editor/Unity.exe'
 
 Console:
