Fixed serialization bug that caused the UnityPlugin to generate invalid yaml files as it did not understand the new tags and solution folder system.

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,11 @@ project_root_marker
 *.csproj.user
 *.suo
 
+
 **/.vs/
 **/.vscode/
+UnityPlugin/packages/*
+UnityPlugin/packages/*
+UnityPlugin/Projeny.Test/obj/
+UnityPlugin/Projeny.Test/bin/
+
